--- a/autograph_front_end/package.json
+++ b/autograph_front_end/package.json
@@ -15,7 +15,8 @@
     "element-ui": "^2.0.9",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.5",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
